<resources>
    <string name="app_name">Kelompok 4</string>
    <string name="hello_world">Hello World</string>
    <string name="logo">Logo</string>
    <string name="name">Ahmad Syaripudin</string>
    <string name="show_data">Data Mahasiswa</string>
    <string name="input_data">Tambah Data</string>
    <string name="edit_data">Ubah Data</string>
    <string name="information">Informasi</string>
    <string name="detail_data">Detail Data</string>
    <string name="input_name">Nama</string>
    <string name="placeholder_date">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="address">Alamat</string>
    <string name="save">Simpan</string>
    <string name="update">Ubah</string>
    <string name="nim">NIM</string>
    <string name="about_app">Aplikasi eCampuz merupakan aplikasi yang digunakan untuk pendataan mahasiswa. User nantinya bisa menambahkan, update, dan hapus data mahasiswa</string>
    <string name="created_by_ahmad_syaripudin">Created By : Ahmad Syaripudin</string>
    <string name="version">Version : 1.0.0</string>
    <string name="web">Web : eCampuz.com</string>
    <string name="no_data">No student data available.</string>
</resources>