<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/lucid_realism_a_cheerful_2d_cartoon_illustration_of_a_playful__2"
            android:contentDescription="@string/name"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white" />

        <TextView
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_data"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/show_data"
            android:textColor="@color/white"
            app:backgroundTint="@color/teal_700"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_input_data"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/input_data"
            android:textColor="@color/white"
            app:backgroundTint="@color/purple_500"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_info"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/information"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            app:cornerRadius="12dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
